XWIKI-19632: Ability to resolve the Include Macro reference parameter against a base reference when no BASE metadata is present in the XDOM